--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,12 @@
       <h1>chatterbox</h1>
       <!-- Your HTML goes here! -->
       <select id='roomSelect'></select>
+      <form action="#" id="send" method="post">
+        <input type="text" name="message" id="message"/>
+        <input type="submit" name="submit" class="submit"/>
+      </form>
       <div id="chats"></div>
     </div>
+
   </body>
 </html>
