--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -34,7 +34,7 @@
       <select id="roomSelect">
       </select>
     </div>
-    <form id="send" method="post">
+    <form action="#" id="send" method="post">
       <input type="text" name="message" id="message"/>
       <input type="submit" name="submit" class="submit"/>
     </form>
