--- a/client/index.html
+++ b/client/index.html
@@ -25,6 +25,7 @@
         <input type="submit" name="submit" class="submit"/>
       </form>
       <div id="chats"></div>
+      <div id="test"></div>
     </div>
 
   </body>
